--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -13,12 +13,15 @@
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
-
+  
   @media (max-width: 1200px) {
     padding: 20px 25px 20px 75px;
-
   }
-
+  @media (max-width: 576px) {
+    font-size: 20px;
+  }
+  
+  
   &::before {
     content: "";
     background: url($icon) no-repeat;
@@ -28,18 +31,19 @@
     height: 60px;
     top: 25%;
     left: 8%;
-
+    
     @media (max-width: 1200px) {
-      width: 32px;
-      height: 30px;
+      width: 42px;
+      height: 40px;
     }
+    
   }
   &:hover {
-    background:darken($bg,8%);
+    background: darken($bg, 8%);
     transition: all 0.3s ease;
   }
   &:active {
-    background:darken($bg,15%);
+    background: darken($bg, 15%);
     box-shadow: none;
   }
 }
