--- a/styles/main.css
+++ b/styles/main.css
@@ -412,8 +412,14 @@ p {
 }
 @media screen and (max-width: 576px) {
   .container {
-    max-width: none;
+    max-width: 450px;
     padding: 0 15px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .container {
+    max-width: 310px;
+    padding: 0 5px;
   }
 }
 
@@ -535,11 +541,18 @@ body {
   cursor: pointer;
 }
 
-.slider {
+.slider__content {
+  text-align: right;
   position: relative;
+}
+@media (max-width: 576px) {
+  .slider__content {
+    margin: 0 10px;
+  }
 }
 
 .slider-image {
+  position: absolute;
   margin: 0 auto;
   padding: 0 54px;
   max-width: 2510px;
@@ -549,23 +562,27 @@ body {
   width: 100%;
   height: 100%;
 }
-
-.slider__content {
-  position: absolute;
-  text-align: right;
-  top: 40%;
-  left: 10%;
+@media (max-width: 992px) {
+  .slider-image img {
+    height: 300px;
+  }
 }
-@media (max-width: 1600px) {
-  .slider__content {
-    display: flex;
-    align-items: center;
+@media (max-width: 576px) {
+  .slider-image {
+    position: static;
+    margin: 0;
+    padding: 0;
   }
 }
 
 .slider__content-box {
   display: flex;
   align-items: center;
+}
+@media (max-width: 992px) {
+  .slider__content-box {
+    margin-bottom: 15px;
+  }
 }
 
 .slider__scroll-box {
@@ -654,7 +671,8 @@ body {
 }
 @media (max-width: 1600px) {
   .slider__text {
-    display: none;
+    padding: 10px;
+    text-align: center;
   }
 }
 
@@ -679,6 +697,11 @@ body {
     padding: 20px 25px 20px 75px;
   }
 }
+@media (max-width: 576px) {
+  .slider-btn {
+    font-size: 20px;
+  }
+}
 .slider-btn::before {
   content: "";
   background: url("../images/note.svg") no-repeat;
@@ -691,8 +714,8 @@ body {
 }
 @media (max-width: 1200px) {
   .slider-btn::before {
-    width: 32px;
-    height: 30px;
+    width: 42px;
+    height: 40px;
   }
 }
 .slider-btn:hover {
@@ -703,11 +726,6 @@ body {
   background: #69872a;
   box-shadow: none;
 }
-@media (max-width: 992px) {
-  .slider-btn {
-    display: none;
-  }
-}
 
 .section__wrap {
   padding: 155px 0;
@@ -715,6 +733,11 @@ body {
 @media (max-width: 1400px) {
   .section__wrap {
     padding: 100px 0;
+  }
+}
+@media (max-width: 992px) {
+  .section__wrap {
+    padding: 60px 0;
   }
 }
 
@@ -766,6 +789,11 @@ body {
     padding: 20px 25px 20px 75px;
   }
 }
+@media (max-width: 576px) {
+  .call-action__btn {
+    font-size: 20px;
+  }
+}
 .call-action__btn::before {
   content: "";
   background: url("../images/note.svg") no-repeat;
@@ -778,8 +806,8 @@ body {
 }
 @media (max-width: 1200px) {
   .call-action__btn::before {
-    width: 32px;
-    height: 30px;
+    width: 42px;
+    height: 40px;
   }
 }
 .call-action__btn:hover {
@@ -812,6 +840,11 @@ body {
     padding: 20px 25px 20px 75px;
   }
 }
+@media (max-width: 576px) {
+  .project-inquiry__btn {
+    font-size: 20px;
+  }
+}
 .project-inquiry__btn::before {
   content: "";
   background: url("../images/banknote.svg") no-repeat;
@@ -824,8 +857,8 @@ body {
 }
 @media (max-width: 1200px) {
   .project-inquiry__btn::before {
-    width: 32px;
-    height: 30px;
+    width: 42px;
+    height: 40px;
   }
 }
 .project-inquiry__btn:hover {
@@ -840,6 +873,7 @@ body {
 .footer-top {
   min-height: 924px;
   background: #e8e8e8 url(../images/map.jpg) repeat-x center;
+  background-size: cover;
 }
 .footer-top__inner {
   display: flex;
@@ -850,6 +884,7 @@ body {
   .footer-top__inner {
     flex-direction: column;
     padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
@@ -967,6 +1002,11 @@ body {
     height: 255px;
   }
 }
+@media (max-width: 576px) {
+  .form__text {
+    padding-top: 20px;
+  }
+}
 .form__name {
   height: 103px;
   margin-right: 40px;
@@ -975,6 +1015,12 @@ body {
 @media (max-width: 1200px) {
   .form__name {
     height: 70px;
+  }
+}
+@media (max-width: 576px) {
+  .form__name {
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
 .form__email {
@@ -986,6 +1032,11 @@ body {
     height: 70px;
   }
 }
+@media (max-width: 576px) {
+  .form__email {
+    width: 100%;
+  }
+}
 .form__box {
   display: flex;
   justify-content: space-between;
@@ -994,6 +1045,11 @@ body {
 @media (max-width: 1200px) {
   .form__box {
     margin-bottom: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .form__box {
+    flex-direction: column;
   }
 }
 .form__btn {
@@ -1011,10 +1067,16 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
+  padding-bottom: 50px;
 }
 @media (max-width: 1200px) {
   .form__btn {
     padding: 20px 25px 20px 75px;
+  }
+}
+@media (max-width: 576px) {
+  .form__btn {
+    font-size: 20px;
   }
 }
 .form__btn::before {
@@ -1029,8 +1091,8 @@ body {
 }
 @media (max-width: 1200px) {
   .form__btn::before {
-    width: 32px;
-    height: 30px;
+    width: 42px;
+    height: 40px;
   }
 }
 .form__btn:hover {
@@ -1080,9 +1142,6 @@ body {
     margin-bottom: 30px;
   }
 }
-.footer__bottom-btn-box {
-  display: flex;
-}
 .footer__bottom-phone {
   color: #ffffff;
   font-size: 1.9em;
@@ -1096,10 +1155,15 @@ body {
     margin-bottom: 25px;
   }
 }
+@media (max-width: 576px) {
+  .footer__bottom-phone {
+    font-size: 42px;
+  }
+}
 .footer__bottom-mail {
   width: 460px;
   color: #ffffff;
-  font-size: 1.9em;
+  font-size: 1.1em;
   font-weight: 400;
   line-height: 1.1em;
   display: block;
@@ -1110,17 +1174,9 @@ body {
     margin-bottom: 35px;
   }
 }
-.footer__bottom-btn {
-  margin-bottom: 125px;
-  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
-  background-color: #ffffff;
-  height: 100px;
-  line-height: 100px;
-  padding: 0 34px;
-}
-@media (max-width: 1200px) {
-  .footer__bottom-btn {
-    margin-bottom: 60px;
+@media (max-width: 576px) {
+  .footer__bottom-mail {
+    font-size: 28px;
   }
 }
 
@@ -1146,6 +1202,65 @@ body {
   margin-bottom: 44px;
   font-size: 1.3em;
   color: #8a8a8a;
+}
+@media (max-width: 576px) {
+  .footer__copyright {
+    font-size: 16px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer__bottom-btn-box {
+    min-width: 300px;
+    padding: 0 10px;
+  }
+}
+
+.footer__bottom-btn {
+  display: block;
+  font-size: 26px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: #ffffff;
+}
+.footer__bottom-btn-social {
+  background-color: #ffffff;
+  display: block;
+  width: 48%;
+}
+
+.footer__bottom-btn-container {
+  display: flex;
+}
+
+.footer__bottom-btn-box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: 0 auto;
+}
+
+.footer__bottom-btn {
+  display: inline-block;
+  width: 100%;
+  background: #ffffff;
+  font-size: 26px;
+  padding: 10px 0;
+}
+.footer__bottom-btn:hover {
+  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+}
+
+.footer__bottom-btn-social {
+  display: inline-block;
+  width: 50%;
+  background: #ffffff;
+  font-size: 26px;
+  padding: 10px 0;
+}
+.footer__bottom-btn-social:hover {
+  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
 }
 
 /*# sourceMappingURL=main.css.map */
