--- a/styles/main.scss
+++ b/styles/main.scss
@@ -38,7 +38,7 @@ p {
   max-width: 2456px;
   margin: 0 auto;
   padding: 0 288px;
-
+  
   @media screen and (max-width: 1900px) {
     max-width: 1860px;
     padding: 0 120px;
@@ -56,8 +56,13 @@ p {
     padding: 0 30px;
   }
   @media screen and (max-width: 576px) {
-    max-width: none;
+    max-width: 450px;
     padding: 0 15px;
+  }
+  
+  @media screen and (max-width: 380px) {
+    max-width: 310px;
+    padding: 0 5px;
   }
 }
 
@@ -68,7 +73,7 @@ body {
   font-weight: 400;
   background-color: #30323a;
   font-family: "Proxima Nova", serif;
-
+  
   @media (max-width: 1700px) {
     font-size: 24px;
   }
@@ -78,47 +83,47 @@ body {
 }
 
 .header {
-
+  
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-height: 212px;
     padding: 97px 0;
-
+    
     @media (max-width: 1900px) {
       padding: 50px 0;
     }
-
+    
     @media (max-width: 1200px) {
       padding: 25px 0;
     }
   }
-
+  
   &__logo {
     max-width: 230px;
     margin-right: 20px;
-
+    
     img {
       object-fit: cover;
       width: 100%;
       height: 100%;
     }
-
+    
     @media (max-width: 1900px) {
       max-width: 150px;
     }
   }
-
+  
   &__menu {
     display: flex;
     align-items: center;
     color: #ffffff;
-
+    
     @media (max-width: 700px) {
       display: none;
     }
-
+    
     &-burger {
       display: none;
       @media (max-width: 700px) {
@@ -126,22 +131,22 @@ body {
       }
     }
   }
-
+  
   &__link {
     color: #ffffff;
     font-family: Gotham, serif;
     text-align: left;
     padding: 18px 0;
   }
-
+  
   &__list {
     padding: 18px 0;
   }
-
+  
   &__link:hover {
     border-bottom: 4px solid #97c13c;
   }
-
+  
 }
 
 .header__list + .header__list {
@@ -150,7 +155,7 @@ body {
 
 .header__search {
   border-bottom: 1px solid #45474e;
-
+  
   &-input {
     //background: transparent;
     border: none;
@@ -161,17 +166,18 @@ body {
     background-size: 32px;
     max-width: 298px;
     padding: 0 40px 15px 10px;
-
+    
     @media (max-width: 1900px) {
       background-size: 26px;
       padding: 0 30px 10px 5px;
     }
-
+    
   }
+  
   @media (max-width: 991.98px) {
-   display: none;
+    display: none;
   }
-
+  
 }
 
 
@@ -186,36 +192,56 @@ body {
 }
 
 .slider {
+
+}
+
+.slider__content {
+  text-align: right;
   position: relative;
+  
+  @media (max-width: 1600px) {
+    //display: flex;
+    //align-items: center;
+  }
+  @media (max-width: 576px) {
+    margin: 0 10px;
+  }
+
 }
 
 .slider-image {
+  position: absolute;
+  //top: 40%;
+  //left: 10%;
   margin: 0 auto;
   padding: 0 54px;
   max-width: 2510px;
   max-height: 1068px;
-
+  
   img {
     width: 100%;
     height: 100%;
+  
+    @media (max-width: 992px) {
+      height: 300px;
+    }
+  }
+  
+  @media (max-width: 576px) {
+    position: static;
+    margin: 0;
+    padding: 0;
   }
 }
 
-.slider__content {
-  position: absolute;
-  text-align: right;
-  top: 40%;
-  left: 10%;
 
-  @media (max-width: 1600px) {
-    display: flex;
-    align-items: center;
-  }
-}
 
 .slider__content-box {
   display: flex;
   align-items: center;
+  @media (max-width: 992px) {
+    margin-bottom: 15px;
+  }
 }
 
 .slider__scroll-box {
@@ -226,7 +252,7 @@ body {
   margin-right: 19px;
   border-radius: 5px;
   z-index: 5;
-
+  
   &::before {
     content: "";
     display: block;
@@ -238,12 +264,13 @@ body {
     position: absolute;
     left: -15px;
     top: -15px;
-
+    
     @media (max-width: 1200px) {
       width: 130px;
       height: 130px;
     }
   }
+  
   @media (max-width: 1600px) {
     margin-right: 50px;
   }
@@ -252,7 +279,6 @@ body {
     height: 100px;
     margin-right: 20px;
   }
-
   @media (max-width: 992px) {
     display: none;
   }
@@ -264,9 +290,10 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
-
+  
   img {
     display: block;
+
   }
 }
 
@@ -292,22 +319,21 @@ body {
   padding: 80px 73px 55px 60px;
   line-height: 36px;
   text-align: justify;
-
+  
   @media (max-width: 1700px) {
     font-size: 28px;
   }
   @media (max-width: 1600px) {
-    display: none;
+    padding: 10px;
+    text-align: center;
   }
-
+  
 }
 
 .slider-btn {
   @include button-bg-icon(#97c13c, #ffffff, "../images/note.svg");
+  
 
-  @media (max-width: 992px) {
-    display: none;
-  }
 }
 
 // ------------------------------------------
@@ -317,16 +343,19 @@ body {
   @media (max-width: 1400px) {
     padding: 100px 0;
   }
+  @media (max-width: 992px) {
+    padding: 60px 0;
+  }
 }
 
 .call-action, .project-inquiry {
-
+  
   &__inner {
     text-align: center;
     color: #ffffff;
     font-family: "Proxima Nova", serif;
   }
-
+  
   &__title {
     font-size: 2em;
     font-weight: 700;
@@ -334,12 +363,12 @@ body {
     text-transform: uppercase;
     letter-spacing: 1.12px;
     margin-bottom: 1.1em;
-
-/*    @media (max-width: 1900px) {
-      font-size: 26px;
-    }*/
+    
+    /*    @media (max-width: 1900px) {
+          font-size: 26px;
+        }*/
   }
-
+  
   &__description {
     font-size: 1.14em;
     font-weight: 400;
@@ -367,22 +396,24 @@ body {
 .footer-top {
   min-height: 924px;
   background: #e8e8e8 url(../images/map.jpg) repeat-x center;
-
+  background-size: cover;
+  
   &__inner {
     display: flex;
     justify-content: space-between;
     padding-top: 152px;
-
+    
     @media (max-width: 992px) {
       flex-direction: column;
       padding-top: 50px;
+      padding-bottom: 50px;
     }
   }
-
+  
 }
 
 .address {
-
+  
   &__link {
     color: #ffffff;
     font-weight: 700;
@@ -390,13 +421,13 @@ body {
     line-height: 64px;
     letter-spacing: 0.56px;
   }
-
+  
   &__list {
     width: 350px;
     @media (max-width: 992px) {
       width: 100%;
     }
-
+    
     &-title {
       color: rgba(255, 255, 255, .5);
       font-weight: 700;
@@ -405,7 +436,7 @@ body {
         font-size: 1.5em;
       }
     }
-
+    
     &-address {
       margin-bottom: 80px;
       width: 250px;
@@ -417,7 +448,7 @@ body {
         margin-bottom: 20px;
       }
     }
-
+    
     &-phone {
       margin-bottom: 50px;
       @media (max-width: 1200px) {
@@ -428,7 +459,7 @@ body {
       }
     }
   }
-
+  
 }
 
 .social {
@@ -436,7 +467,7 @@ body {
   @media (max-width: 992px) {
     margin-bottom: 20px;
   }
-
+  
   &__link {
     display: inline-block;
     color: #ffffff;
@@ -450,7 +481,7 @@ body {
 .form {
   text-align: left;
   max-width: 1240px;
-
+  
   &__text, &__name, &__email {
     background-color: rgba(255, 255, 255, .1);
     padding: 0 20px 0 40px;
@@ -461,7 +492,7 @@ body {
     @media (max-width: 1200px) {
       padding: 0 10px 0 20px;
     }
-
+    
     &::placeholder {
       color: #ffffff;
       font-size: 24px;
@@ -474,7 +505,7 @@ body {
       }
     }
   }
-
+  
   &__text {
     width: 100%;
     height: 317px;
@@ -485,8 +516,11 @@ body {
       margin-bottom: 20px;
       height: 255px;
     }
+    @media (max-width: 576px) {
+      padding-top: 20px;
+    }
   }
-
+  
   &__name {
     height: 103px;
     margin-right: 40px;
@@ -494,16 +528,23 @@ body {
     @media (max-width: 1200px) {
       height: 70px;
     }
+    @media (max-width: 576px) {
+      width: 100%;
+      margin-bottom: 20px;
+    }
   }
-
+  
   &__email {
     width: 48%;
     height: 103px;
     @media (max-width: 1200px) {
       height: 70px;
     }
+    @media (max-width: 576px) {
+      width: 100%;
+    }
   }
-
+  
   &__box {
     display: flex;
     justify-content: space-between;
@@ -511,10 +552,14 @@ body {
     @media (max-width: 1200px) {
       margin-bottom: 20px;
     }
+    @media (max-width: 576px) {
+      flex-direction: column;
+    }
   }
-
+  
   &__btn {
     @include button-bg-icon(#ffffff, #f49244, "../images/paperplane.svg");
+    padding-bottom: 50px;
   }
 }
 
@@ -523,7 +568,7 @@ body {
   @media (max-width: 1200px) {
     padding-top: 100px;
   }
-
+  
   &-inner {
     display: flex;
     justify-content: space-between;
@@ -534,14 +579,14 @@ body {
       text-align: center;
     }
   }
-
+  
   &-left {
     text-align: left;
     @media (max-width: 992px) {
       text-align: center;
     }
   }
-
+  
   &-right {
     text-align: right;
     max-width: 570px;
@@ -550,11 +595,8 @@ body {
       margin-bottom: 30px;
     }
   }
-
-  &-btn-box {
-    display: flex;
-  }
-
+  
+  
   &-phone {
     color: #ffffff;
     font-size: 1.9em;
@@ -565,12 +607,15 @@ body {
     @media (max-width: 1200px) {
       margin-bottom: 25px;
     }
+    @media (max-width: 576px) {
+      font-size: 42px;
+    }
   }
-
+  
   &-mail {
     width: 460px;
     color: #ffffff;
-    font-size: 1.9em;
+    font-size: 1.1em;
     font-weight: 400;
     line-height: 1.1em;
     display: block;
@@ -578,20 +623,11 @@ body {
     @media (max-width: 1200px) {
       margin-bottom: 35px;
     }
-  }
-
-  &-btn {
-    margin-bottom: 125px;
-    box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
-    background-color: #ffffff;
-    height: 100px;
-    line-height: 100px;
-    padding: 0 34px;
-    @media (max-width: 1200px) {
-      margin-bottom: 60px;
+    @media (max-width: 576px) {
+      font-size: 28px;
     }
   }
-
+  
 }
 
 .footer__date {
@@ -614,5 +650,66 @@ body {
   margin-bottom: 44px;
   font-size: 1.3em;
   color: #8a8a8a;
+  @media (max-width: 576px) {
+    font-size: 16px;
+    text-align: center;
+  }
 }
 
+
+.footer__bottom-btn-box {
+  
+  @media (max-width: 576px) {
+   min-width: 300px;
+    padding: 0 10px;
+  }
+}
+
+.footer__bottom-btn {
+  display: block;
+  font-size: 26px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: #ffffff;
+  
+  &-social {
+    background-color: #ffffff;
+    display: block;
+    width: 48%;
+  }
+}
+
+.footer__bottom-btn-container {
+  display: flex;
+}
+
+.footer__bottom-btn-box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: 0 auto;
+}
+
+.footer__bottom-btn {
+  display: inline-block;
+  width: 100%;
+  background: #ffffff;
+  font-size: 26px;
+  padding: 10px 0;
+  
+  &:hover {
+    box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+  }
+}
+
+.footer__bottom-btn-social {
+  display: inline-block;
+  width: 50%;
+  background: #ffffff;
+  font-size: 26px;
+  padding: 10px 0;
+  
+  &:hover {
+    box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+  }
+}
