--- a/styles/main.css
+++ b/styles/main.css
@@ -1232,10 +1232,15 @@ body {
   font-size: 1.3em;
   color: #8a8a8a;
 }
+@media (max-width: 992px) {
+  .footer__copyright {
+    font-size: 24px;
+    text-align: center;
+  }
+}
 @media (max-width: 576px) {
   .footer__copyright {
     font-size: 16px;
-    text-align: center;
   }
 }
 
@@ -1265,31 +1270,70 @@ body {
 
 .footer__bottom-btn-box {
   display: flex;
-  flex-direction: column;
-  width: 300px;
-  margin: 0 auto;
+  max-width: 474px;
+  margin-bottom: 125px;
+}
+@media (max-width: 1400px) {
+  .footer__bottom-btn-box {
+    margin-bottom: 75px;
+  }
+}
+@media (max-width: 576px) {
+  .footer__bottom-btn-box {
+    flex-direction: column;
+    width: 300px;
+    margin: 0 auto;
+  }
 }
 
 .footer__bottom-btn {
-  display: inline-block;
-  width: 100%;
+  display: block;
   background: #ffffff;
-  font-size: 26px;
-  padding: 10px 0;
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+  padding: 0 37px;
+  border-radius: 5px;
+}
+@media (max-width: 576px) {
+  .footer__bottom-btn {
+    display: inline-block;
+    font-size: 26px;
+    padding: 10px 0;
+  }
 }
 .footer__bottom-btn:hover {
-  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+  background: #ebebeb;
+  transition: all 0.3s ease;
+}
+.footer__bottom-btn:active {
+  background: #d9d9d9;
+  box-shadow: none;
 }
 
 .footer__bottom-btn-social {
-  display: inline-block;
-  width: 50%;
+  display: block;
   background: #ffffff;
   font-size: 26px;
-  padding: 10px 0;
+  height: 100px;
+  line-height: 100px;
+  padding: 0 37px;
+}
+@media (max-width: 576px) {
+  .footer__bottom-btn-social {
+    display: inline-block;
+    width: 100%;
+    font-size: 26px;
+    padding: 10px 0;
+  }
 }
 .footer__bottom-btn-social:hover {
-  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+  background: #ebebeb;
+  transition: all 0.3s ease;
+}
+.footer__bottom-btn-social:active {
+  background: #d9d9d9;
+  box-shadow: none;
 }
 
 /*# sourceMappingURL=main.css.map */
