--- a/styles/main.scss
+++ b/styles/main.scss
@@ -662,9 +662,13 @@ body {
   margin-bottom: 44px;
   font-size: 1.3em;
   color: #8a8a8a;
+  
+  @media (max-width: 992px) {
+    font-size: 24px;
+    text-align: center;
+  }
   @media (max-width: 576px) {
     font-size: 16px;
-    text-align: center;
   }
 }
 
@@ -697,31 +701,64 @@ body {
 
 .footer__bottom-btn-box {
   display: flex;
-  flex-direction: column;
-  width: 300px;
-  margin: 0 auto;
+  max-width: 474px;
+  margin-bottom: 125px;
+  
+  @media (max-width: 1400px) {
+    margin-bottom: 75px;
+  }
+  @media (max-width: 576px) {
+    flex-direction: column;
+    width: 300px;
+    margin: 0 auto;
+  }
 }
 
 .footer__bottom-btn {
-  display: inline-block;
-  width: 100%;
+  display: block;
   background: #ffffff;
-  font-size: 26px;
-  padding: 10px 0;
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+  padding: 0 37px;
+  border-radius: 5px;
+  @media (max-width: 576px) {
+    display: inline-block;
+    font-size: 26px;
+    padding: 10px 0;
+  }
   
   &:hover {
-    box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+    background: darken(#ffffff, 8%);
+    transition: all 0.3s ease;
+  }
+  &:active {
+    background: darken(#ffffff, 15%);
+    box-shadow: none;
   }
 }
 
 .footer__bottom-btn-social {
-  display: inline-block;
-  width: 50%;
+  display: block;
   background: #ffffff;
   font-size: 26px;
-  padding: 10px 0;
+  height: 100px;
+  line-height: 100px;
+  padding: 0 37px;
+  
+  @media (max-width: 576px) {
+    display: inline-block;
+    width: 100%;
+    font-size: 26px;
+    padding: 10px 0;
+  }
   
   &:hover {
-    box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+    background: darken(#ffffff, 8%);
+    transition: all 0.3s ease;
+  }
+  &:active {
+    background: darken(#ffffff, 15%);
+    box-shadow: none;
   }
 }
