--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -16,6 +16,7 @@
   
   @media (max-width: 1200px) {
     padding: 20px 25px 20px 75px;
+    font-size: 20px;
   }
   @media (max-width: 576px) {
     font-size: 20px;
