--- a/styles/main.css
+++ b/styles/main.css
@@ -351,6 +351,181 @@ template {
   src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype"), url("../fonts/ProximaNova-Regular.svg#proxima_nova_bold") format("svg");
   /* Chrome < 4, Legacy iOS */
 }
+.menu__icon {
+  display: none;
+}
+
+.menu__list > li {
+  padding: 18px 0;
+  position: relative;
+  margin: 0px 0px 0px 20px;
+}
+
+.menu__link {
+  color: #ffffff;
+  font-family: Gotham, serif;
+  text-align: left;
+  padding: 18px 0;
+}
+
+.menu__link:hover {
+  border-bottom: 4px solid #97c13c;
+}
+
+.menu__arrow {
+  display: none;
+}
+
+/* ----------------------- */
+body._pc .menu__list > li:hover .menu__sub-list {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0px, 0px);
+  pointer-events: all;
+}
+
+body._touch .menu__list > li {
+  display: flex;
+  align-items: center;
+}
+
+body._touch .menu__link {
+  flex: 1 1 auto;
+}
+
+body._touch .menu__arrow {
+  display: block;
+  width: 0;
+  height: 0;
+  margin: 0px 0px 0px 5px;
+  transition: transform 0.3s ease 0s;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid #fff;
+}
+
+body._touch .menu__list > li._active .menu__sub-list {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0px, 0px);
+  pointer-events: all;
+}
+
+body._touch .menu__list > li._active .menu__arrow {
+  transform: rotate(-180deg);
+}
+
+/* ----------------------- */
+@media (min-width: 767px) {
+  .menu__list {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu__list > li {
+    padding: 10px 0;
+  }
+}
+@media (max-width: 767px) {
+  .menu__icon {
+    z-index: 5;
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+  }
+
+  .menu__icon span,
+.menu__icon::before,
+.menu__icon::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all 0.3s ease 0s;
+    background-color: #fff;
+  }
+
+  .menu__icon::before,
+.menu__icon::after {
+    content: "";
+  }
+
+  .menu__icon::before {
+    top: 0;
+  }
+
+  .menu__icon::after {
+    bottom: 0;
+  }
+
+  .menu__icon span {
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+
+  .menu__icon._active span {
+    transform: scale(0) translate(0px, -50%);
+  }
+
+  .menu__icon._active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0px, -50%);
+  }
+
+  .menu__icon._active::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0px, 50%);
+  }
+
+  .menu__body {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 100px 30px 30px 30px;
+    transition: left 0.3s ease 0s;
+    overflow: auto;
+  }
+
+  .menu__body._active {
+    left: 0;
+    z-index: 4;
+  }
+
+  .menu__body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 70px;
+    z-index: 4;
+  }
+
+  .menu__list > li {
+    flex-wrap: wrap;
+    margin: 0px 0px 30px 0px;
+  }
+
+  .menu__list > li:last-child {
+    margin-bottom: 0;
+  }
+
+  .menu__list > li._active .menu__sub-list {
+    display: block;
+  }
+
+  .menu__link {
+    color: #ffffff;
+    font-family: Gotham, serif;
+    text-align: left;
+    padding: 18px 0;
+  }
+}
 html {
   box-sizing: border-box;
 }
@@ -441,6 +616,18 @@ body {
   }
 }
 
+body._lock {
+  overflow: hidden;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  background-color: #30323a;
+}
 .header__inner {
   display: flex;
   justify-content: space-between;
@@ -472,39 +659,9 @@ body {
     max-width: 150px;
   }
 }
-.header__menu {
-  display: flex;
-  align-items: center;
-  color: #ffffff;
-}
-@media (max-width: 700px) {
-  .header__menu {
-    display: none;
-  }
-}
-.header__menu-burger {
-  display: none;
-}
-@media (max-width: 700px) {
-  .header__menu-burger {
-    display: block;
-  }
-}
-.header__link {
-  color: #ffffff;
-  font-family: Gotham, serif;
-  text-align: left;
-  padding: 18px 0;
-}
-.header__list {
-  padding: 18px 0;
-}
-.header__link:hover {
-  border-bottom: 4px solid #97c13c;
-}
 
-.header__list + .header__list {
-  margin-left: 46px;
+.main {
+  margin-top: 153px;
 }
 
 .header__search {
@@ -543,6 +700,7 @@ body {
 
 .slider {
   position: relative;
+  margin-bottom: 15px;
 }
 @media (max-width: 576px) {
   .slider {
@@ -616,7 +774,7 @@ body {
   position: relative;
   margin-right: 19px;
   border-radius: 5px;
-  z-index: 5;
+  z-index: 2;
 }
 @media (max-width: 1600px) {
   .slider__scroll-box {
@@ -724,6 +882,7 @@ body {
 @media (max-width: 1200px) {
   .slider-btn {
     padding: 20px 25px 20px 75px;
+    font-size: 20px;
   }
 }
 @media (max-width: 576px) {
@@ -816,6 +975,7 @@ body {
 @media (max-width: 1200px) {
   .call-action__btn {
     padding: 20px 25px 20px 75px;
+    font-size: 20px;
   }
 }
 @media (max-width: 576px) {
@@ -867,6 +1027,7 @@ body {
 @media (max-width: 1200px) {
   .project-inquiry__btn {
     padding: 20px 25px 20px 75px;
+    font-size: 20px;
   }
 }
 @media (max-width: 576px) {
@@ -1101,6 +1262,7 @@ body {
 @media (max-width: 1200px) {
   .form__btn {
     padding: 20px 25px 20px 75px;
+    font-size: 20px;
   }
 }
 @media (max-width: 576px) {
